fix: improve per-monitor responsive layout